--- a/code/frontend/src/styles/LoginModal.module.css
+++ b/code/frontend/src/styles/LoginModal.module.css
@@ -121,6 +121,20 @@
   background-color: rgb(0, 0, 0, 0);
 }
 
+.demo_wrapper {
+  margin-top: 40px;
+  border: solid 1px var(--electric-green);
+  padding: 10px;
+}
+
+.demo_wrapper > div {
+  cursor: text;
+}
+
+.white_demo_text {
+  color: whitesmoke;
+}
+
 @media (max-width: 800px) {
   .banner_text {
     font-size: var(--x-large);
